--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.4.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
