--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.4.0",
+    "@stripe/stripe-js": "^5.2.0",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
